Fix left sidebar overflow

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -151,6 +151,7 @@ cesium-compass {
   width: 280px;
   overflow-y: auto;
   overflow-x: inherit;
+  height: 100%;
 }
 
 .sidebar.left {
